2005-04-16  Miguel Sofer <msofer@users.sf.net>

	* generic/Var.c (Tcl_ArrayObjCmd - ARRAY_NAMES): fix Tcl_Obj leak
	[Bug 1084111] 

2005-04-16  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* generic/tclIOUtil.c: force clenaup of the interp result
	in TclLoadFile(). Some implementations of TclpFindSymbol()
	will seed the interp result with error message when unable
	to find the requested symbol (this is not considered to
	be an error).

        Set of changes correcting huge memory waste (not a leak)
        when a thread exits. This has been introduced in 8.4.7
        within an attempt to correctly cleanup after ourselves when
        Tcl library is being unloaded with the Tcl_Finalize() call.

        This fixes the Tcl Bug #1178445.

        * generic/tclInt.h: added prototypes for TclpFreeAllocCache()
        and TclFreeAllocCache()

        * generic/tclThreadAlloc.c: modified TclFinalizeThreadAlloc()
        to explicitly call TclpFreeAllocCache with the NULL-ptr as 
        argument signalling cleanup of private tsd key used only by
        the threading allocator.

        * unix/tclUnixThrd.c: fixed TclpFreeAllocCache() to recognize
        when being called with NULL argument. This is a signal for it
        to clean up the tsd key associated with the threading allocator.

        * win/tclWinThrd.c: renamed TclWinFreeAllocCache to TclpFreeAllocCache
        and fixed to recognize when being called with NULL argument.
        This is a signal for it to clean up the tsd key associated with the
        threading allocator.

2005-04-13  Don Porter  <dgp@users.sourceforge.net>

	* tests/unixInit.test:	Disabled obsolete tests and removed code
	* tests/encoding.test:	that supported them.
	* generic/tclInterp.c:

	* library/init.tcl:	Use auto-loading to bring in Tcl Module
	* library/tclIndex:	support as needed.  This reduces startup
	* library/tm.tcl:	time by delaying this initialization to
	a later time.

2005-04-15  Miguel Sofer <msofer@users.sf.net>
