@@ -35399,6 +35399,18 @@ test clock-47.2 {regression test - four digit time} {
     clock scan 0039
 } [clock scan 0039 -format %H%M]
 
+test clock-48.1 {Bug 1185933: 'i' destroyed by clock init} -setup {
+    interp create child
+} -body {
+    interp eval child {
+	set i 12345
+	clock format 0
+	list [catch { set i } result] $result
+    }
+} -cleanup {
+    interp delete child
+} -result {0 12345}
+
 # cleanup
 
 namespace delete ::testClock
